syntax = "proto3";
package mainchain.stream.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "mainchain/stream/v1/params.proto";
import "mainchain/stream/v1/stream.proto";

option go_package = "github.com/unification-com/mainchain/x/stream/types";

// GenesisState defines the stream module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated StreamExport streams = 2 [(gogoproto.nullable) = false];
}

// StreamExport holds genesis export data for a beacon, including submitted timestamps
message StreamExport {
  // receiver is the wallet that will receive stream payments
  string receiver = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // sender is the wallet making the update
  string sender = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // stream is the stream data
  Stream stream = 3 [(gogoproto.nullable) = false];
}
